# bar-library

Examples/C++ Examples/: example1.x  example2.x  timer.x
Examples/Script Examples/: example-script-driver.x  example2.sh
include/: Animation.hpp  Bar.hpp  CMakeCache.txt  CMakeLists.txt  Color.hpp  Makefile  a.out  cmake_install.cmake  executable  main.cpp  test.cpp
include/Examples/: test.cpp  test2.cpp
include/include/: Animation.hpp  Bar.hpp  Color.hpp  Symbols.hpp
